@@ -53,6 +53,7 @@ Improved curses driver: symbol @ simulates ESC on menu
 Improved snapshot loading: now setting "--sna-no-change-machine" becomes "--snap-no-change-machine" and applies to .sna and .z80
 Improved curses driver: now can use utf "blocky" characters and have 64x48 resolution
 Improved accurate Z80 timing: IM mode 0 is 1 t-state shorter than IM mode 1
+Improved real tape loading: acceleration is disabled by default, added setting to save configuration
 
 Fixed Pentagon border: now ukflag demo is perfect
 Fixed Spectrum 128k machines border: now ula128, scroll2017 demos are perfect
